src/parser/HospitalDSLParser.js
// Generated from HospitalDSL.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import HospitalDSLListener from './HospitalDSLListener.js';
import HospitalDSLVisitor from './HospitalDSLVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HospitalDSLParser extends antlr4.Parser {

    static grammarFileName = "HospitalDSL.g4";
    static literalNames = [ null, "'Hospital'", "'{'", "'}'", "'Module'", 
                            "'Label:'", "';'", "'Icon:'", "'Color:'", "'Fields'", 
                            "':'", "'required'", "'optional'", "'unique'", 
                            "'label'", "'default'", "'min'", "'max'", "'options'", 
                            "','", "'Role'", "'Portal:'", "'Manage:'", "'Dashboard:'", 
                            "'Auth'", "'Type:'", "'Expiry:'", "'Roles:'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, "ID", "INT", "STRING", 
                             "WS", "COMMENT" ];
    static ruleNames = [ "hospital", "hospitalBody", "moduleDecl", "moduleBody", 
                         "moduleItem", "fieldsDecl", "fieldDef", "fieldType", 
                         "fieldConstraint", "roleDecl", "roleBody", "roleFeature", 
                         "authDecl", "authBody", "authItem" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HospitalDSLParser.ruleNames;
        this.literalNames = HospitalDSLParser.literalNames;
        this.symbolicNames = HospitalDSLParser.symbolicNames;
    }



	hospital() {
	    let localctx = new HospitalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HospitalDSLParser.RULE_hospital);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 30;
	        this.match(HospitalDSLParser.T__0);
	        this.state = 31;
	        this.match(HospitalDSLParser.ID);
	        this.state = 32;
	        this.match(HospitalDSLParser.T__1);
	        this.state = 33;
	        this.hospitalBody();
	        this.state = 34;
	        this.match(HospitalDSLParser.T__2);
	        this.state = 35;
	        this.match(HospitalDSLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hospitalBody() {
	    let localctx = new HospitalBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HospitalDSLParser.RULE_hospitalBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 17825808) !== 0)) {
	            this.state = 40;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 4:
	                this.state = 37;
	                this.moduleDecl();
	                break;
	            case 20:
	                this.state = 38;
	                this.roleDecl();
	                break;
	            case 24:
	                this.state = 39;
	                this.authDecl();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 44;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleDecl() {
	    let localctx = new ModuleDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HospitalDSLParser.RULE_moduleDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 45;
	        this.match(HospitalDSLParser.T__3);
	        this.state = 46;
	        this.match(HospitalDSLParser.ID);
	        this.state = 47;
	        this.match(HospitalDSLParser.T__1);
	        this.state = 48;
	        this.moduleBody();
	        this.state = 49;
	        this.match(HospitalDSLParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleBody() {
	    let localctx = new ModuleBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HospitalDSLParser.RULE_moduleBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 928) !== 0)) {
	            this.state = 51;
	            this.moduleItem();
	            this.state = 56;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleItem() {
	    let localctx = new ModuleItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HospitalDSLParser.RULE_moduleItem);
	    try {
	        this.state = 67;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 57;
	            this.match(HospitalDSLParser.T__4);
	            this.state = 58;
	            this.match(HospitalDSLParser.STRING);
	            this.state = 59;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 60;
	            this.match(HospitalDSLParser.T__6);
	            this.state = 61;
	            this.match(HospitalDSLParser.STRING);
	            this.state = 62;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 63;
	            this.match(HospitalDSLParser.T__7);
	            this.state = 64;
	            this.match(HospitalDSLParser.ID);
	            this.state = 65;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 66;
	            this.fieldsDecl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldsDecl() {
	    let localctx = new FieldsDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HospitalDSLParser.RULE_fieldsDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.match(HospitalDSLParser.T__8);
	        this.state = 70;
	        this.match(HospitalDSLParser.T__1);
	        this.state = 72; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 71;
	            this.fieldDef();
	            this.state = 74; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	        this.state = 76;
	        this.match(HospitalDSLParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldDef() {
	    let localctx = new FieldDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HospitalDSLParser.RULE_fieldDef);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.match(HospitalDSLParser.ID);
	        this.state = 79;
	        this.match(HospitalDSLParser.T__9);
	        this.state = 80;
	        this.fieldType();
	        this.state = 84;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 522240) !== 0)) {
	            this.state = 81;
	            this.fieldConstraint();
	            this.state = 86;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 87;
	        this.match(HospitalDSLParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldType() {
	    let localctx = new FieldTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HospitalDSLParser.RULE_fieldType);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 89;
	        this.match(HospitalDSLParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldConstraint() {
	    let localctx = new FieldConstraintContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HospitalDSLParser.RULE_fieldConstraint);
	    var _la = 0;
	    try {
	        this.state = 111;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 91;
	            this.match(HospitalDSLParser.T__10);
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 92;
	            this.match(HospitalDSLParser.T__11);
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 93;
	            this.match(HospitalDSLParser.T__12);
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 94;
	            this.match(HospitalDSLParser.T__13);
	            this.state = 95;
	            this.match(HospitalDSLParser.STRING);
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 96;
	            this.match(HospitalDSLParser.T__14);
	            this.state = 97;
	            this.match(HospitalDSLParser.STRING);
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 98;
	            this.match(HospitalDSLParser.T__15);
	            this.state = 99;
	            this.match(HospitalDSLParser.INT);
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 100;
	            this.match(HospitalDSLParser.T__16);
	            this.state = 101;
	            this.match(HospitalDSLParser.INT);
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 102;
	            this.match(HospitalDSLParser.T__17);
	            this.state = 103;
	            this.match(HospitalDSLParser.STRING);
	            this.state = 108;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===19) {
	                this.state = 104;
	                this.match(HospitalDSLParser.T__18);
	                this.state = 105;
	                this.match(HospitalDSLParser.STRING);
	                this.state = 110;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	roleDecl() {
	    let localctx = new RoleDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HospitalDSLParser.RULE_roleDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this.match(HospitalDSLParser.T__19);
	        this.state = 114;
	        this.match(HospitalDSLParser.ID);
	        this.state = 115;
	        this.match(HospitalDSLParser.T__1);
	        this.state = 116;
	        this.roleBody();
	        this.state = 117;
	        this.match(HospitalDSLParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	roleBody() {
	    let localctx = new RoleBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HospitalDSLParser.RULE_roleBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 119;
	            this.roleFeature();
	            this.state = 122; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 14680064) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	roleFeature() {
	    let localctx = new RoleFeatureContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HospitalDSLParser.RULE_roleFeature);
	    var _la = 0;
	    try {
	        this.state = 154;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 21:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 124;
	            this.match(HospitalDSLParser.T__20);
	            this.state = 125;
	            this.match(HospitalDSLParser.ID);
	            this.state = 130;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===19) {
	                this.state = 126;
	                this.match(HospitalDSLParser.T__18);
	                this.state = 127;
	                this.match(HospitalDSLParser.ID);
	                this.state = 132;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 133;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 134;
	            this.match(HospitalDSLParser.T__21);
	            this.state = 135;
	            this.match(HospitalDSLParser.ID);
	            this.state = 140;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===19) {
	                this.state = 136;
	                this.match(HospitalDSLParser.T__18);
	                this.state = 137;
	                this.match(HospitalDSLParser.ID);
	                this.state = 142;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 143;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 144;
	            this.match(HospitalDSLParser.T__22);
	            this.state = 145;
	            this.match(HospitalDSLParser.ID);
	            this.state = 150;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===19) {
	                this.state = 146;
	                this.match(HospitalDSLParser.T__18);
	                this.state = 147;
	                this.match(HospitalDSLParser.ID);
	                this.state = 152;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 153;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	authDecl() {
	    let localctx = new AuthDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, HospitalDSLParser.RULE_authDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        this.match(HospitalDSLParser.T__23);
	        this.state = 157;
	        this.match(HospitalDSLParser.T__1);
	        this.state = 158;
	        this.authBody();
	        this.state = 159;
	        this.match(HospitalDSLParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	authBody() {
	    let localctx = new AuthBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, HospitalDSLParser.RULE_authBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 161;
	            this.authItem();
	            this.state = 164; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 234881024) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	authItem() {
	    let localctx = new AuthItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, HospitalDSLParser.RULE_authItem);
	    var _la = 0;
	    try {
	        this.state = 182;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 166;
	            this.match(HospitalDSLParser.T__24);
	            this.state = 167;
	            this.match(HospitalDSLParser.ID);
	            this.state = 168;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 169;
	            this.match(HospitalDSLParser.T__25);
	            this.state = 170;
	            this.match(HospitalDSLParser.STRING);
	            this.state = 171;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 172;
	            this.match(HospitalDSLParser.T__26);
	            this.state = 173;
	            this.match(HospitalDSLParser.ID);
	            this.state = 178;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===19) {
	                this.state = 174;
	                this.match(HospitalDSLParser.T__18);
	                this.state = 175;
	                this.match(HospitalDSLParser.ID);
	                this.state = 180;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 181;
	            this.match(HospitalDSLParser.T__5);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

HospitalDSLParser.EOF = antlr4.Token.EOF;
HospitalDSLParser.T__0 = 1;
HospitalDSLParser.T__1 = 2;
HospitalDSLParser.T__2 = 3;
HospitalDSLParser.T__3 = 4;
HospitalDSLParser.T__4 = 5;
HospitalDSLParser.T__5 = 6;
HospitalDSLParser.T__6 = 7;
HospitalDSLParser.T__7 = 8;
HospitalDSLParser.T__8 = 9;
HospitalDSLParser.T__9 = 10;
HospitalDSLParser.T__10 = 11;
HospitalDSLParser.T__11 = 12;
HospitalDSLParser.T__12 = 13;
HospitalDSLParser.T__13 = 14;
HospitalDSLParser.T__14 = 15;
HospitalDSLParser.T__15 = 16;
HospitalDSLParser.T__16 = 17;
HospitalDSLParser.T__17 = 18;
HospitalDSLParser.T__18 = 19;
HospitalDSLParser.T__19 = 20;
HospitalDSLParser.T__20 = 21;
HospitalDSLParser.T__21 = 22;
HospitalDSLParser.T__22 = 23;
HospitalDSLParser.T__23 = 24;
HospitalDSLParser.T__24 = 25;
HospitalDSLParser.T__25 = 26;
HospitalDSLParser.T__26 = 27;
HospitalDSLParser.ID = 28;
HospitalDSLParser.INT = 29;
HospitalDSLParser.STRING = 30;
HospitalDSLParser.WS = 31;
HospitalDSLParser.COMMENT = 32;

HospitalDSLParser.RULE_hospital = 0;
HospitalDSLParser.RULE_hospitalBody = 1;
HospitalDSLParser.RULE_moduleDecl = 2;
HospitalDSLParser.RULE_moduleBody = 3;
HospitalDSLParser.RULE_moduleItem = 4;
HospitalDSLParser.RULE_fieldsDecl = 5;
HospitalDSLParser.RULE_fieldDef = 6;
HospitalDSLParser.RULE_fieldType = 7;
HospitalDSLParser.RULE_fieldConstraint = 8;
HospitalDSLParser.RULE_roleDecl = 9;
HospitalDSLParser.RULE_roleBody = 10;
HospitalDSLParser.RULE_roleFeature = 11;
HospitalDSLParser.RULE_authDecl = 12;
HospitalDSLParser.RULE_authBody = 13;
HospitalDSLParser.RULE_authItem = 14;

class HospitalContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HospitalDSLParser.RULE_hospital;
    }

	ID() {
	    return this.getToken(HospitalDSLParser.ID, 0);
	};

	hospitalBody() {
	    return this.getTypedRuleContext(HospitalBodyContext,0);
	};

	EOF() {
	    return this.getToken(HospitalDSLParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.enterHospital(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.exitHospital(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HospitalDSLVisitor ) {
	        return visitor.visitHospital(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class HospitalBodyContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HospitalDSLParser.RULE_hospitalBody;
    }

	moduleDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ModuleDeclContext);
	    } else {
	        return this.getTypedRuleContext(ModuleDeclContext,i);
	    }
	};

	roleDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(RoleDeclContext);
	    } else {
	        return this.getTypedRuleContext(RoleDeclContext,i);
	    }
	};

	authDecl = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AuthDeclContext);
	    } else {
	        return this.getTypedRuleContext(AuthDeclContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.enterHospitalBody(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.exitHospitalBody(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HospitalDSLVisitor ) {
	        return visitor.visitHospitalBody(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ModuleDeclContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HospitalDSLParser.RULE_moduleDecl;
    }

	ID() {
	    return this.getToken(HospitalDSLParser.ID, 0);
	};

	moduleBody() {
	    return this.getTypedRuleContext(ModuleBodyContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.enterModuleDecl(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.exitModuleDecl(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HospitalDSLVisitor ) {
	        return visitor.visitModuleDecl(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ModuleBodyContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HospitalDSLParser.RULE_moduleBody;
    }

	moduleItem = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ModuleItemContext);
	    } else {
	        return this.getTypedRuleContext(ModuleItemContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.enterModuleBody(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.exitModuleBody(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HospitalDSLVisitor ) {
	        return visitor.visitModuleBody(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ModuleItemContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HospitalDSLParser.RULE_moduleItem;
    }

	STRING() {
	    return this.getToken(HospitalDSLParser.STRING, 0);
	};

	ID() {
	    return this.getToken(HospitalDSLParser.ID, 0);
	};

	fieldsDecl() {
	    return this.getTypedRuleContext(FieldsDeclContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.enterModuleItem(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.exitModuleItem(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HospitalDSLVisitor ) {
	        return visitor.visitModuleItem(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FieldsDeclContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HospitalDSLParser.RULE_fieldsDecl;
    }

	fieldDef = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FieldDefContext);
	    } else {
	        return this.getTypedRuleContext(FieldDefContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.enterFieldsDecl(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.exitFieldsDecl(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HospitalDSLVisitor ) {
	        return visitor.visitFieldsDecl(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FieldDefContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HospitalDSLParser.RULE_fieldDef;
    }

	ID() {
	    return this.getToken(HospitalDSLParser.ID, 0);
	};

	fieldType() {
	    return this.getTypedRuleContext(FieldTypeContext,0);
	};

	fieldConstraint = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FieldConstraintContext);
	    } else {
	        return this.getTypedRuleContext(FieldConstraintContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.enterFieldDef(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HospitalDSLListener ) {
	        listener.exitFieldDef(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof HospitalDSLVisitor ) {
	        return visitor.visitFieldDef(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FieldTypeContext extends antlr4.ParserRuleContext {
